# Text_Quest_Interpreter

./: Block.cpp  Block.hpp  CMakeLists.txt  ColorFader.cpp  ColorFader.hpp  InputField.cpp  InputField.hpp  MusicPlayer.cpp  MusicPlayer.hpp  README.md  TextPrinter.cpp  TextPrinter.hpp  main.cpp
docs/: Documentation.md  test.json
